# tilepuzzles_android

./: README.md
app/src/androidTest/java/net/kamkash/tilepuzzles/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/materials/: bakedTextureLit.mat  bakedTextureLitTransparent.filamat  bakedTextureLitTransparent.mat  bakedTextureOpaque.filamat  bakedTextureOpaque.mat  bakedTextureUnlitTransparent.filamat  bakedTextureUnlitTransparent.mat  multiTextureUnlitTransparent.filamat  multiTextureUnlitTransparent.mat
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/tilePuzzlesLib/: AnchorTile.h  AndroidContext.h  App.h  CMakeLists.txt  ColorVertex.h  ConfigMgr.h  FilamentAppObjects.h  GLogger.h  GameUtil.h  GeoUtil.h  HexSpinMesh.h  HexSpinRenderer.h  HexTile.h  IOUtil.h  IRenderer.h  Makefile  Mesh.h  ResourceUtil.h  RollerMesh.h  RollerRenderer.h  SliderMesh.h  SliderRenderer.h  TApp.h  TAppWin.h  TLogger.h  TRenderer.h  TVertexBuffer.h  Tile.h  TileDto.h  TileGroup.h  Vertex.h  android_debug.h  enums.h  libMain.cpp  libMain1.cpp  tilePuzzelsLib.h
app/src/main/cpp/tilePuzzlesLib/architecture/: classes.puml
app/src/main/cpp/tilePuzzlesLib/test/: TestUtil.h  rtest.sh  run.sh  test_config.cpp  test_entities.cpp  test_geometry.cpp  test_logger.cpp  vscode.sh
app/src/main/cpp/tilePuzzlesLib/test/resources/: config.json
app/src/main/cpp/tilePuzzlesLib/textures/: CC0.html  bakedTextureLit.filamat  bakedTextureTransparent.filamat
app/src/main/java/net/kamkash/tilepuzzles/: MainActivity.kt  TUiHelper.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/net/kamkash/tilepuzzles/: ExampleUnitTest.kt
